--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,5 @@
   "devCommand": "cd web && npm run dev",
   "installCommand": "cd web && npm install",
   "framework": "nextjs",
-  "outputDirectory": "web/.next",
-  "env": {
-    "NEXT_PUBLIC_SUPABASE_URL": "@supabase_url",
-    "NEXT_PUBLIC_SUPABASE_ANON_KEY": "@supabase_anon_key",
-    "SUPABASE_SERVICE_ROLE_KEY": "@supabase_service_role_key"
-  }
+  "outputDirectory": "web/.next"
 }
