--- a/web/package.json
+++ b/web/package.json
@@ -30,7 +30,7 @@
     "react-hook-form": "^7.66.0",
     "tailwind-merge": "^2.5.2",
     "zod": "^4.1.12",
-    "zustand": "4.5.4"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@playwright/test": "1.56.1",
