--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "cd web && npm run build",
-  "devCommand": "cd web && npm run dev",
-  "installCommand": "cd web && npm install"
+  "buildCommand": "npm run build --prefix web",
+  "devCommand": "npm run dev --prefix web",
+  "installCommand": "npm install --prefix web"
 }
