feat: landing page agora mostra logout quando autenticado e corrige redirect OAuth do Google
- auth.ts: move redirect() para fora do try/catch, eliminando captura de NEXT_REDIRECT e impedindo texto literal 'NEXT_REDIRECT' no modal
- page.tsx: home page resolve sessão server-side e deriva displayName para UI ciente de autenticação
- LandingContent.tsx: adiciona cabeçalho com saudação ao usuário logado, botão de logout com transição/refresh, e fecha modal quando sessão muda
- serverClient.ts: introduz opção readOnly para cliente Supabase, evitando mutações de cookies quando não permitido
- session.ts: getCurrentSession usa cliente read-only, eliminando erro 'Cookies can only be modified in Server Action'
- OAuth callback: mantém rota e tratamento de erro para exchanges via Supabase
- Novos arquivos Aviator serverless, preferences, profile e testes E2E adicionados ao commit

--- a/docs/api/asyncapi/aviator.yaml
+++ b/docs/api/asyncapi/aviator.yaml
@@ -1,10 +1,11 @@
 asyncapi: '2.6.0'
 info:
   title: Aviator Demo Realtime API
-  version: 0.2.0
+  version: 0.3.0
   description: >-
-    Define os canais WebSocket usados para o loop do jogo (Observer/State/Strategy) e para o
-    chat. Esta versão inclui os comandos de aposta/cashout descritos no plano da Fase 4.
+    Define os canais WebSocket usados pelo loop serverless do Aviator (Observer/State/Strategy)
+    e pelo chat. Os eventos são publicados pelas rotas Next.js (`app/api/aviator/*`) usando a
+    service role do Supabase e seguem o plano descrito na Fase 4.
 servers:
   supabaseRealtime:
     url: wss://realtime.demo-aviator.supabase.co/realtime/v1
@@ -12,12 +13,6 @@ servers:
     description: Canal Supabase Realtime compartilhado (game.state/history)
     security:
       - userTokenAuth: []
-  nodeBroadcast:
-    url: wss://node-broadcast.demo-aviator.app
-    protocol: wss
-    description: Serviço Node externo responsável por emitir comandos e overrides
-    security:
-      - adminTokenAuth: []
 channels:
   game.state:
     description: Fluxo contínuo com o estado atual do round (State pattern)
@@ -74,10 +69,6 @@ channels:
 components:
   securitySchemes:
     userTokenAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
-    adminTokenAuth:
       type: http
       scheme: bearer
       bearerFormat: JWT
