--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "@supabase/supabase-js": "2.81.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "isomorphic-dompurify": "^2.32.0",
     "lucide-react": "^0.452.0",
     "next": "16.0.3",
     "react": "19.0.0",
