--- a/web/package.json
+++ b/web/package.json
@@ -36,6 +36,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.0",
     "@playwright/test": "1.56.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "6.4.2",
