feat: Benefits system, chat attachments, avatar upload, admin improvements
- Benefits/Rewards System (Strategy Pattern)
  - Database tables: benefit_types, user_benefits, user_vip_levels, benefit_transactions
  - RLS policies for authenticated users
  - BenefitCard, BenefitsDashboard, VipProgress components
  - Server Actions for claiming benefits
  - Benefit strategies: Welcome, Daily, Cashback, VIP, Promo

- Chat Attachments
  - Image upload in support chat
  - ChatAttachmentInput, ChatMessageAttachment, ImageAttachmentViewer
  - Upload facade with Strategy Pattern
  - File validation

- Avatar Upload
  - AvatarUpload component with preview
  - useAvatarUpload hook
  - Avatar upload strategy

- Synthetic Chat Messages
  - Brazilian name generator
  - Aviator comment generator
  - Synthetic message scheduler

- Admin Improvements
  - AdminDashboard, AdminTabs components
  - AdminWithdrawalsPanel
  - Improved navigation

- UI Fixes
  - VipProgress brighter text colors
  - BenefitCard green button styling
  - Sidebar nav with Benefits link

- Documentation
  - Technical documentation
  - User manual

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -19,6 +19,7 @@
       "@/modules/*": ["src/modules/*"],
       "@/types/*": ["src/types/*"],
       "@/config/*": ["src/config/*"],
+      "@/hooks/*": ["src/hooks/*"],
       "@/app/*": ["app/*"],
       "@/tests/*": ["tests/*"]
     },
