--- a/web/package.json
+++ b/web/package.json
@@ -27,9 +27,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.452.0",
-    "next": "16.0.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "next": "^16.0.7",
+    "react": "^19.0.1",
+    "react-dom": "^19.0.1",
     "react-hook-form": "^7.66.0",
     "tailwind-merge": "^2.5.2",
     "zod": "^4.1.12",
