--- a/deploy/nginx/aviator-engine.conf
+++ b/deploy/nginx/aviator-engine.conf
@@ -8,6 +8,25 @@ server {
     listen [::]:80;
     server_name 31.97.26.48;
 
+    location /ws {
+        proxy_pass http://aviator_backend;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_read_timeout 3600s;
+        proxy_send_timeout 3600s;
+
+        proxy_buffering off;
+        proxy_cache off;
+    }
+
     location / {
         proxy_pass http://aviator_backend;
         proxy_http_version 1.1;
