Set nginx server_name to engine.grandbellagio.gg

--- a/deploy/nginx/aviator-engine.conf
+++ b/deploy/nginx/aviator-engine.conf
@@ -6,7 +6,7 @@ upstream aviator_backend {
 server {
     listen 80;
     listen [::]:80;
-    server_name 31.97.26.48;
+    server_name engine.grandbellagio.gg 31.97.26.48;
 
     location /ws {
         proxy_pass http://aviator_backend;
